<!-- strings.xml
     English strings
     last edited on 2025-02-22 -->

<resources>
    <string name="app_name">My Position</string>
    <string name="title_activity_my_position">My Position</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about_dialog">About</string>
    <string name="title_activity_help_dialog">Help</string>
    <string name="title_activity_converter">Convert GPS Coordinate</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_viewmap">View Map</string>
    <string name="menu_getpos">Request position</string>
    <string name="menu_converter">Converter</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="last_fix_time">Last GPS fix: </string>
    <string name="geoloc">Coordinates:</string>
    <string name="uncert">Uncertainty:</string>
    <string name="unknownAddr">Unknown address</string>
    <string name="errAddr">Web read error!</string>
    <string name="noAddr">No address data!</string>
    <string name="addrInfo">Address Info</string>
    <string name="toshortAddr">Address info:</string>
    <string name="unknownLoc">Unknown location</string>
    <string name="unknownCoord">Unknown coordinates</string>
    <string name="posnotknown">Position not known yet…</string>
    <string name="unknownFix">Unknown</string>
    <string name="message">Message (Text suggestion)</string>
    <string name="decCoord">Decimal Coordinates</string>
    <string name="degCoord">Degree Coordinates</string>
    <string name="myPos">My current position: </string>
    <string name="myLoc">My current location: </string>
    <string name="nord">N</string>
    <string name="south">S</string>
    <string name="west">W</string>
    <string name="east">E</string>
    <string name="longi">Longitude:</string>
    <string name="lati">Latitude:</string>
    <string name="shlongi">Lon.:</string>
    <string name="shlati">Lat.:</string>
    <string name="long1">Longitude 1:</string>
    <string name="lat1">Latitude 1:</string>
    <string name="long2">Longitude 2:</string>
    <string name="lat2">Latitude 2:</string>
    <string name="height">Height:</string>
    <string name="degree">→ Degree:</string>
    <string name="decimal">→ Decimal:</string>
    <string name="back_twice">Press again to exit</string>
    <string name="no_provider">No Service Provider available!</string>
    <string name="dist">Distance</string>
    <string name="distm">Distance (m):</string>

    <string name="msg_text">Click on the following link to see my position on the OSM map: </string>
    <string name="invValue">Invalid value</string>
    <string name="email_string">Necessary for reliable query of address data per OSM Nominatim Reverse Geocoder. The mail address will be treated confidential and only used to contact you in case of service problems. See http://wiki.openstreetmap.org/wiki/Nominatim.</string>
    <string name="titel_email_string">Mail Address for OSM Geocoder</string>
    <string name="toast_string">Show toast for new position with height above sea-level, GPS-height und height correction value.</string>
    <string name="titel_toast_string">Show Toast for Height Values</string>
    <string name="map_string">When not tagged the position is shown online in OpenStreetMap. When tagged it tries to use a local map app to show the position offline. (Eventually does not work on your device as it depends on Android\'s app management).</string>
    <string name="titel_map_string">How to Show the Map?</string>
    <string name="screen_orientation">Show screen in landscape mode instead of portrait mode.</string>
    <string name="titel_screen_orientation">Use landscape mode</string>
    <string name="h_nn">Height above Sea-level:</string>
    <string name="h_gps">Height from GPS:</string>
    <string name="h_corr">Height correction:</string>
    <string name="t_noapp">There is no suitable app installed.</string>
    <string name="darkScreen">Set the screen to dark mode.</string>
    <string name="titel_darkScreen">Use dark mode</string>

    <!-- Permissions -->
    <string name="dialog_fine_location_title">Permissions Required</string>
    <string name="dialog_fine_location_message">For the app\'s purpose to determine the current location, location permission is necessary. </string>
    <string name="dialog_background_loc_title">Permission wanted</string>
    <string name="dialog_background_loc_message">Location data is more precise when the optional permission \'Allow all the time\' is granted.</string>
    <string name="grant_perm_later">You may grant the optional Background location permission for \'My Location\' in the phone settings.</string>
    <string name="app_settings">App Settings</string>
    <string name="cancel">Cancel</string>

</resources>
