<?xml version="1.0" encoding="utf-8"?>
<!-- Last edited 2026-03-30 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Dummy preferences to set empty screen space on top -->
    <Preference
        android:key="dummy1"
        android:title=" "
        android:summary=" "
        />

    <Preference
        android:key="dummy2"
        android:title=" "
        android:summary=" "
        />

    <EditTextPreference
        android:key="email_String"
        android:title="@string/titel_email_string"
        android:icon="@drawable/ic_email_white_48dp"
        android:summary="@string/email_string"
        />

    <ListPreference
        android:defaultValue="online"
        android:dialogTitle="@string/map_string_title"
        android:entries="@array/pref_show_position_entries"
        android:entryValues="@array/pref_show_position_values"
        android:icon="@drawable/ic_menu_mapmode_white"
        android:key="show_position"
        android:title="@string/titel_map_string"
        android:summary="@string/map_string_summary"
        />

    <CheckBoxPreference
        android:key="screen_Orientation"
        android:title="@string/titel_screen_orientation"
        android:icon="@drawable/ic_rot_portr_landsc_white_48dp"
        android:summary="@string/screen_orientation"
        />

    <CheckBoxPreference
        android:key="show_Toast"
        android:title="@string/titel_toast_string"
        android:icon="@drawable/ic_speaker_notes_white_48dp"
        android:summary="@string/toast_string"
        />

</PreferenceScreen>
