<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MyPositionActivity">

    <item
        android:id="@+id/menu_getpos"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/menu_getpos"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_viewmap"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_viewmap"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_list_item1"
        android:icon="@drawable/ic_core_overflow"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_converter"
                android:icon="@android:drawable/ic_menu_agenda"
                android:title="@string/menu_converter"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu_help"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_about"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
